syntax = "proto3";

package Captcha;

option go_package = "service/Captcha";

service Captcha {
    rpc GetCaptcha (emptyRequest) returns (img);
}

message emptyRequest {}

message img {
    bytes CaptchaImage = 1;
}
